Creo la sección del footer y le edito parcialmente el css

--- a/css/index.css
+++ b/css/index.css
@@ -38,5 +38,9 @@ figure {
 .row {
     margin: 0px !important;
 }
+.contact-form input {
+    background-image: url('../img/envelope.svg');
+    background-repeat: no-repeat;
+}
 /* ----------------- Projects --------------- */
 
